# bidirectional-instances

./: LICENSE  Main.hs  README.md  default.nix  prototype.cabal  shell.nix
Backend/: FcTypeChecker.hs  FcTypes.hs
Frontend/: HsParser.hs  HsRenamer.hs  HsTypeChecker.hs  HsTypes.hs
Tests/: CmpVariants.hs  TestPrimitive.hs  TestSuperclass.hs  TestSuperclass2.hs
Utils/: AssocList.hs  Ctx.hs  Errors.hs  ListT.hs  PrettyPrint.hs  SnocList.hs  Substitution.hs  Trace.hs  Unique.hs  Utils.hs  Var.hs
