name:                prototype
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
license:             BSD3

executable prototype
  main-is:             Main.hs
  build-depends:       base >=4.8 && <5
                     , parsec
                     , pretty
                     , mtl
  other-modules:       Backend.FcTypeChecker
                     , Backend.FcTypes
                     , Frontend.HsParser
                     , Frontend.HsRenamer
                     , Frontend.HsTypeChecker
                     , Frontend.HsTypes
                     , Utils.Annotated
                     , Utils.AssocList
                     , Utils.Ctx
                     , Utils.Errors
                     , Utils.FreeVars
                     , Utils.Kind
                     , Utils.ListT
                     , Utils.PrettyPrint
                     , Utils.SnocList
                     , Utils.Substitution
                     , Utils.Trace
                     , Utils.Unique
                     , Utils.Utils
                     , Utils.Var
  default-language:    Haskell2010
  ghc-options:         -Wall -fdefer-typed-holes -Wno-unused-imports
